move to JDK 21